--- a/src/11-DivaAnalysis.tex
+++ b/src/11-DivaAnalysis.tex
@@ -219,7 +219,7 @@ They are the same as those created through an execution of \command{divacalc}. N
 
 \example
 \begin{lstlisting}[style=Bash]
-[charles@gher13 divastripped] divasave ~/DIVA/test/
+[divastripped] divasave ~/DIVA/test/
 \end{lstlisting}
 will save the files into \directory{\textasciitilde/DIVA/test/}
 
