--- a/src/12-DivaPostprocessing.tex
+++ b/src/12-DivaPostprocessing.tex
@@ -350,7 +350,7 @@ Install and build the last NetCDF version for Unix: download the latest release 
 \item Copy \url{http://www.unidata.ucar.edu/downloads/netcdf/netcdf-3_6_2/index.jsp}  into directory of your choice
 \item Unzip the folder  and type:
 \begin{lstlisting}[style=Bash]
-[charles@gher13 Software]
+[Software]
 ./configure
 ...
 make check..
@@ -361,7 +361,7 @@ make install
 \item download \texttt{Ncview} and unzip the folder
 \item type\\ 
 \begin{lstlisting}[style=Bash]
-[charles@gher13 Software]
+[Software]
 ./configure
 ...
 make 
