--- a/src/14-DivaOnWeb.tex
+++ b/src/14-DivaOnWeb.tex
@@ -120,14 +120,14 @@ The \diva Matlab toolbox is an interface to perform 2-D analysis without having 
 Download the package from: \url{http://modb.oce.ulg.ac.be/mediawiki/upload/divaformatlab.zip}
 and unzip the archive:
 \begin{lstlisting}[style=Bash]
-[charles@gher13 Software]$ wget http://modb.oce.ulg.ac.be/mediawiki/upload/divaformatlab.zip
+[Software]$ wget http://modb.oce.ulg.ac.be/mediawiki/upload/divaformatlab.zip
 ...
-[charles@gher13 Software]$ unzip divaformatlab.zip
+[Software]$ unzip divaformatlab.zip
 \end{lstlisting}
 
 The structure is the following:
 \begin{lstlisting}[style=Bash]
-[charles@gher13 Software]$ tree
+[Software]$ tree
 .
 |-- README
 |-- divagrid.m
