--- a/src/17-DivaScriptCode.tex
+++ b/src/17-DivaScriptCode.tex
@@ -14,7 +14,7 @@ This chapter is dedicated to the description of these programs, in order to allo
 The Fortran programs are sorted according to their purpose: 
 
 \begin{lstlisting}[style=Bash]
-[charles@gher13 Fortran] tree -d -L 1
+[Fortran] tree -d -L 1
 .
 |-- Calc
 |-- Extensions
