--- a/src/00-DivaHeader.tex
+++ b/src/00-DivaHeader.tex
@@ -92,7 +92,7 @@ literate={\$}{{\textcolor{DimGray}{\$}}}1
 %$
 
 % paths + extensions for the figures
-\DeclareGraphicsExtensions{.pdf,.jpg,.JPG,.png,.PNG}
+\DeclareGraphicsExtensions{.jpg,.pdf,.JPG,.png,.PNG}
 \graphicspath{
 {./figures/preprocessing/},{./figures/postprocessing/},{./figures/icones/},{./figures/test_cases/},
 {./figures/examples/},{./figures/gallery/},{./figures/images/},{./figures/GUI/},{./figures/analysis/},
