--- a/src/05-DivaTheory.tex
+++ b/src/05-DivaTheory.tex
@@ -454,7 +454,7 @@ In an infinite domain, the correlation function was shown to be proportional to 
 \begin{figure}[htpb]
 	\centering
 	\parbox{.6\textwidth}{
-		\includegraphics[width=.55\textwidth,bb=148 269 507 577]{results_test1}
+		\includegraphics[width=.55\textwidth]{results_test1.jpg}
 		}\parbox{.4\textwidth}{
 		\caption{Analysis of a single data point with high signal-to-noise ration and no background field.\label{singleanalysis}}}
 \end{figure}
@@ -462,7 +462,7 @@ In an infinite domain, the correlation function was shown to be proportional to 
 \begin{figure}[htpb]
 	\centering
 	\parbox{.6\textwidth}{
-		\includegraphics[width=.55\textwidth,bb=73 253 487 575]{kernelf}
+		\includegraphics[width=.55\textwidth]{kernelf.jpg}
 		}\parbox{.4\textwidth}{
 		\caption[Theoretical Kernel function and analysis of a single point with a unit value.]{The theoretical Kernel function is given in red, while the black curve comes from the analysis of a single point with a unit value.\label{kernel1}}}
 \end{figure}
