--- a/src/09-DivaGeneral.tex
+++ b/src/09-DivaGeneral.tex
@@ -165,7 +165,7 @@ In realistic application, the contours are more complex: they have more sub-cont
 
 \begin{figure}[H]
 \centering 
-\includegraphics[width=.5\textwidth,bb=110 268 492 576]{coast_cont_fig}
+\includegraphics[width=.5\textwidth]{coast_cont_fig}
 \caption{Example of a contour file and its graphical representation.}
 \end{figure}
 
@@ -202,7 +202,7 @@ The data file (\file{data.dat}) contains at least three columns:
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=.55\textwidth,bb=110 268 525 577]{data_dat_fig}
+\includegraphics[width=.55\textwidth]{data_dat_fig}
 \caption{Example of a data file and its graphical representation.}
 \end{figure}
 
