--- a/src/13-DivaExamples.tex
+++ b/src/13-DivaExamples.tex
@@ -84,7 +84,7 @@ The land-sea contours are created from the GEBCO bathymetry. The Black Sea and t
 
 \begin{figure}[h!]
 \centering
-\includegraphics[width=.9\textwidth,bb=14 254 588 561]{diva_oi_09_10030dataval_mesh3}
+\includegraphics[width=.9\textwidth]{diva_oi_09_10030dataval_mesh3}
 \caption{Finite-element mesh and salinity measurements used for the application.\label{fig:diva_oi_09_10030dataval_mesh3}}
 \end{figure}
 
@@ -134,7 +134,7 @@ The fit yields the value $L=1.36^{\circ}$ ($\simeq$ 151~km).
 
 \begin{figure}[h!]
 \centering
-\includegraphics[width=.475\textwidth,bb=106 253 450 575]{Salinity_19502010_0707_10029e_fit}
+\includegraphics[width=.475\textwidth]{Salinity_19502010_0707_10029e_fit}
 \caption[Fit of the data correlation to the theoretical kernel.]{Fit of the data correlation to the theoretical kernel (dashed line). \label{fig:Salinity_19502010_0707_10029e_fit}}
 \end{figure}
 
