--- a/src/07-DivaError.tex
+++ b/src/07-DivaError.tex
@@ -121,7 +121,7 @@ Near the boundary, data points influence more easily the analysis because rigidi
  
 \begin{figure}[htpb]
 \centering
-\includegraphics[width=.7\textwidth,bb=66 206 510 630]{fig4_kernel_bceffect}
+\includegraphics[width=.7\textwidth]{fig4_kernel_bceffect}
 \caption[Analysis in a square domain with a point at the centre and another at $(-4.5,0)$.]{Analysis in a square domain $[-5,5]\times[-5,5]$ with a point at the centre and another at $(-4.5,0)$. The signal-to-noise ratio $\snr=1$ for both cases. Note the larger analysis value near the boundary, indicating a larger background variance.
 \label{fig:fig4_kernel_bceffect}}
 \end{figure} 
@@ -258,7 +258,7 @@ Finally, the error using the real covariance function (Fig.~\ref{fig:salinity_er
 
 \begin{figure*}[htpb]
 \centering
-\includegraphics[width=1.35\textwidth,angle=90,bb=24 292 581 605]{salinity_error_oi_0707_10030DD}
+\includegraphics[width=1.35\textwidth,angle=90]{salinity_error_oi_0707_10030DD}
 \caption[Error fields computed using four different methods.]{Error fields computed using four different methods: (a) OI, (b) poor man's estimate, (c) hybrid and (d) real covariance methods.\label{fig:salinity_error_oi_0707_10030DD}}
 \end{figure*}
 
