--- a/src/00-DivaHeader.tex
+++ b/src/00-DivaHeader.tex
@@ -161,8 +161,6 @@ literate={\$}{{\textcolor{DimGray}{\$}}}1
 
 %\renewcommand{\LettrineFontHook}{\color[gray]{0.5}}
 
-\newcommand{\example}{\underline{Example}:\,}
-\newcommand{\examples}{\underline{Examples}:\,}
 \newcommand{\be}{\begin{equation}}
 \newcommand{\ee}{\end{equation}}
 \newcommand{\beq}{\begin{eqnarray}}
@@ -284,6 +282,8 @@ overlay={\begin{tcbclipinterior}\fill[NavyBlue] (frame.south west)
     
 \newcommand{\warning}{\warn{Warning}~}
 \newcommand{\info}{\note{Note}~}
+\newcommand{\example}{\note{Example}~}
+\newcommand{\examples}{\note{Examples}~}
 
 % ------------------------------------------------
 % hyperref setup
