--- a/src/08-DivaConstraints.tex
+++ b/src/08-DivaConstraints.tex
@@ -419,9 +419,9 @@ Groups are years, month and hours. Matlab file \file{pseudodata.m} can be used t
 \begin{figure}[htpb]
 \centering
 \subfigure[]{
-\includegraphics[width=.475\textwidth,bb=136 270 504 575]{analysis_nodetrend}
+\includegraphics[width=.475\textwidth]{analysis_nodetrend}
 }\subfigure[]{
-\includegraphics[width=.475\textwidth,bb=136 270 504 575]{analysis_detrend}
+\includegraphics[width=.475\textwidth]{analysis_detrend}
 }
 \caption[Example of a reconstruction without and with detrending.]{Example of a reconstruction without (a) and with detrending (b). Note the difference in the color bars.\label{fig:detrend1}}
 \end{figure}
@@ -431,12 +431,12 @@ Along with the field without trend, the \command{divadetrend} tool also provides
 \begin{figure}[htpb]
 \centering
 \subfigure[Inter-annual]{
-\includegraphics[width=.475\textwidth,bb=100 270 490 575]{example_detrend1}
+\includegraphics[width=.475\textwidth]{example_detrend1}
 }\subfigure[Seasonal]{
-\includegraphics[width=.475\textwidth,bb=100 270 490 575]{example_detrend2}
+\includegraphics[width=.475\textwidth]{example_detrend2}
 }
 \subfigure[Daily]{
-\includegraphics[width=.475\textwidth,bb=100 270 490 575]{example_detrend3}
+\includegraphics[width=.475\textwidth]{example_detrend3}
 }
 \caption{Trends obtained from the data using the detrending tool.\label{fig:detrend2}}
 \end{figure}
